sort.basic.insertion.AlgInsertionSort.scala.error
Erreur de compilation :
AlgInsertionSort:9: error: ';' expected but '=' found.
        l:Int=j
             ^